--- a/Tendr.html
+++ b/Tendr.html
@@ -91,7 +91,7 @@
 
   <p class="cta-subtitle">Join the platform that powers the smiles of Africa’s everyday food heroes—with the tools, supply, and support to grow on your terms.</p>
   </div>
-  <a href="#" class="btn btn-primary">Get Started</a>
+  <a href="mailto:hello@tendrhq.com?subject=Partnership%20Inquiry%20-%20Sponsorship%20or%20Tech%20Support&body=Dear%20Tendr%20Progress%20Team%2C%0A%0AI%20hope%20this%20message%20finds%20you%20well.%20I%20am%20reaching%20out%20to%20express%20my%20interest%20in%20getting%20involved%20with%20Tendr%20Progress%2C%20either%20as%20a%20sponsor%20or%20as%20a%20tech%20support/startup%20collaborator.%0A%0AI%20believe%20in%20your%20mission%20and%20would%20love%20to%20contribute%20to%20its%20growth%20and%20impact.%20Please%20let%20me%20know%20how%20we%20can%20connect%20further.%0A%0AThank%20you%20for%20your%20time%20and%20consideration.%0A%0ABest%20regards%2C%0A%5BYour%20Name%5D" class="btn btn-primary">Get Started</a>
 </section>
 
 
