--- a/Tendr.html
+++ b/Tendr.html
@@ -52,7 +52,7 @@
 
   <!-- How Tendr Works -->
   <section class="our-solution container">
-    <div><p><span class="solution-title">OUR SOLUTION </span></p></div>
+    <div class="solution-span"><p><span class="solution-title">OUR SOLUTION </span></p></div>
     <h2>How Tendr Works</h2>
     <div class="solution-intro">
       <p><b>One Platform. Endless Potential. From Ingredients To Insights —</p>
