--- a/Story.html
+++ b/Story.html
@@ -9,6 +9,12 @@
 
 </head>
 <body>
+<div id="preloader">
+  <div class="loader"></div>
+</div>
+
+
+
       <!-- Navigation -->
   <nav class="main-nav">
     <header class="site-header container">
@@ -26,7 +32,7 @@
 <div class="founder-story container">
     <h2><span class="story-title">FOUNDER STORY</span></h2>
     <div class="story-image">
-        <img src="images/Story Jpeg.png" alt="people_eating">
+        <img src="images/Story Jpeg.jpg" alt="people_eating">
     </div>
     <div class="story-row">
     <div class="story-heading">
