--- a/index.html
+++ b/index.html
@@ -127,10 +127,8 @@
     <div class="social-icons">
       <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
       <a href="https://linkedin.com"><i class="fab fa-linkedin-in"></i></a>
-      <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-      <a href="https://www.behance.net"><i class="fab fa-behance"></i></a>
+      <a href="https://x.com"><i class="fab fa-x-twitter"></i></a>
       <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
-      <a href="https://google.com"><i class="fab fa-google-plus-g"></i></a>
     </div>
   </div>
   <div class="footer-bottom-right">
