--- a/Story.html
+++ b/Story.html
@@ -113,9 +113,9 @@
   <div class="footer-bottom-left">
     <div class="social-icons">
       <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
-      <a href="https://linkedin.com"><i class="fab fa-linkedin-in"></i></a>
-      <a href="https://x.com"><i class="fab fa-x-twitter"></i></a>
-      <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/company/tendrhq/"><i class="fab fa-linkedin-in"></i></a>
+      <a href="https://x.com/Tendr_hq?t=7dYDfVgoxgYUQoNFKcJlRQ&s=09"><i class="fab fa-x-twitter"></i></a>
+      <a href="https://www.instagram.com/tendrhq/profilecard/?igsh=Y2l0cWJxbzU5ZXJl"><i class="fab fa-instagram"></i></a>
     </div>
   </div>
   <div class="footer-bottom-right">
